[package]
name = "release-ratchet"
version = "0.1.1"
edition = "2021"
description = "Git-vendor-agnostic semantic release tool using conventional commits"

[[bin]]
name = "release-ratchet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
semver = { version = "1", features = ["serde"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
toml_edit = "0.22"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
glob = "0.3"
regex = "1"
semver = "1"
serde_json = "1"
